add:archivos y últimos cambios

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<h2>HOLA</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue pharetra neque at consectetur. Etiam non tempus est, eu auctor purus. Proin dapibus metus sed tortor placerat, at egestas velit ultrices. Aenean efficitur vehicula ipsum quis porttitor. Aliquam aliquet auctor odio non posuere. Proin tempus porta erat sit amet porttitor. Aenean at viverra massa, a lobortis purus. Ut maximus hendrerit sapien blandit imperdiet. Sed cursus nisl euismod mauris imperdiet, nec imperdiet tellus tristique.</p>
 					</div>
-					<div class="caja">
+					<div class="caja clase-rojo">
 						<img src="images/gatitos 2.jpg" alt="">
 						<h2>HOLA</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue pharetra neque at consectetur. Etiam non tempus est, eu auctor purus. Proin dapibus metus sed tortor placerat, at egestas velit ultrices. Aenean efficitur vehicula ipsum quis porttitor. Aliquam aliquet auctor odio non posuere. Proin tempus porta erat sit amet porttitor. Aenean at viverra massa, a lobortis purus. Ut maximus hendrerit sapien blandit imperdiet. Sed cursus nisl euismod mauris imperdiet, nec imperdiet tellus tristique.</p>
